# todos-nuestros-pumas

./: .env.example  .gitignore  CNAME  README.md  SPECS.md  app.js  index.html  pyproject.toml  robots.txt  site.webmanifest  sitemap.xml
data/: gazetteer.json  pumas.csv
scripts/: convert_csv.py  gen_icons.py  update_from_sheets.py
static/: app.js
tpumas/: __init__.py  server.py
