[project]
name = "tpumas"
version = "0.1.0"
description = "Todos Nuestros Pumas — servidor local"
authors = [
    {name = "n/a"}
]
requires-python = ">=3.10"
dependencies = ["gspread (>=6.2.1,<7.0.0)", "cryptography (>=47.0.0)"]

[project.optional-dependencies]
icons = ["numpy>=1.24", "Pillow>=11.0"]

[project.scripts]
serve = "tpumas.server:main"

[tool.poetry]
packages = [{include = "tpumas"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
